tools/tests/errors/surf_lib_20.experr
mean requires at least one data point
